[project]
name = "gems-data"
version = "0.1.0"
description = "Processing and analysis for GEMS data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "bs4>=0.0.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "requests>=2.32.3",
]
